--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Whack'em All</title>
         <meta name="description" content="">
         <meta name="viewport" content="initial-scale=1, minimum-scale=0.1, user-scalable=1" id="Viewport">
 
@@ -15,6 +15,7 @@
         <link rel="stylesheet" type="text/css" href="css/reset.css"><!-- First Style -->
         <link rel="stylesheet" type="text/css" href="css/normalize.min.css">
         <link rel="stylesheet" type="text/css" href="css/main.min.css">
+        <link rel="stylesheet" type="text/css" href="css/fonts.css">
         <link rel="stylesheet" type="text/css" href="css/custom.css">
         <link rel="stylesheet" type="text/css" href="css/font-awesome-4.2.0/css/font-awesome.min.css">
 
@@ -26,61 +27,11 @@
         <script src="js/vendor/jquery.countdown.js"></script>
         <script src="js/vendor/ion.sound.min.js"></script>
 
-
-        <!--<script type="text/javascript">
-            $(document).ready(function(){
-            $('#facebook').click(function(e){
-            e.preventDefault();
-            FB.ui(
-            {
-            method: 'feed',
-            name: 'This is the content of the "name" field.',
-            link: 'http://killthisdog.com/',
-            redirect_uri: 'http://killthisdog.com/',
-            picture: 'http://www.hyperarts.com/external-xfbml/share-image.gif',
-            caption: 'This is the content of the "caption" field.',
-            description: 'This is the content of the "description" field, below the caption.',
-            message: ''
-            });
-            });
-            });
-        </script>
-        <script type="text/javascript">
-            $(document).ready(function(){
-            $('#facebook').click(function(e){
-            e.preventDefault();
-            FB.ui({
-              method: 'feed',
-              link: 'https://developers.facebook.com/docs/',
-              caption: 'An example caption',
-            }, function(response){});
-            });
-            });
-        </script>-->
-
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <!--<script>
-          window.fbAsyncInit = function() {
-            FB.init({
-              appId      : '1731180437107585',
-              xfbml      : true,
-              version    : 'v2.2'
-            });
-          };
-
-          (function(d, s, id){
-             var js, fjs = d.getElementsByTagName(s)[0];
-             if (d.getElementById(id)) {return;}
-             js = d.createElement(s); js.id = id;
-             js.src = "https://connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v2.0";
-             fjs.parentNode.insertBefore(js, fjs);
-           }(document, 'script', 'facebook-jssdk'));
-        </script>-->
-
         <div id="main-frame">
             <!-- MENU SCREEN -->
             
