--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="initial-scale=1, minimum-scale=0.1, user-scalable=1" id="Viewport">
 
+        <link rel="icon" 
+            type="image/png" 
+            href="favicon-w.png">
+
         <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 
         <link rel="stylesheet" type="text/css" href="css/reset.css"><!-- First Style -->
